--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.7.2"
+    "@azure/functions": "^4.7.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "azure-functions-core-tools": "^4.x"
